force-app/main/default/objects/Engagement_Message__c/Engagement_Message__c.object-meta.xml
<CustomObject>
    <label>Engagement Message</label>
    <nameField>
        <displayFormat>EM-{0}</displayFormat>
        <label>Engagement Message ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>