force-app/main/default/objects/Engagement_Message__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Engagement Messages</relationshipLabel>
    <relationshipName>Engagement_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>