force-app/main/default/objects/Engagement_Message__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Messages</relationshipLabel>
    <relationshipName>Engagement_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>