force-app/main/default/objects/Engagement_Message__c/fields/Engagement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Contact__c</fullName>
    <label>Engagement Contact</label>
    <referenceTo>Engagement_Contact__c</referenceTo>
    <relationshipLabel>Engagement Messages</relationshipLabel>
    <relationshipName>Engagement_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>