force-app/main/default/objects/Engagement_Message__c/fields/Engagement_Planned_Message__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Planned_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Planned Message</label>
    <referenceTo>Engagement_Planned_Message__c</referenceTo>
    <relationshipLabel>Engagement Messages</relationshipLabel>
    <relationshipName>Engagement_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>